# CalibCamera

./: CMakeLists.txt  README.md  build.sh  config.yaml  demo.py  distort.py  distort1.py  main.cpp
Srcs/: Camera.h  CheckBoard.h
include/: Camera.h  CheckBoard.h  Config.h  Utils.h
src/: Camera.cpp  CheckBoard.cpp  Config.cpp  Utils.cpp
